# MarsRover2018

./: .gitignore  .gitmodules  .travis.yml  IK.cpp  README.md  armtest_node.cpp  dependencies.rosinstall  setup_model.bash  stitch.py
External Tools/: Kernel Generation.xlsx
External Tools/CL-DUO3D-LIN-1.0.80.20/: LICENSE.rtf  LICENSE.txt  README.txt
External Tools/CL-DUO3D-LIN-1.0.80.20/DUODriver/: ReadMe.txt  duo-1024-3.13.0-100-generic.ko  duo-1024-3.13.0-100-lowlatency.ko  duo-1024-3.13.0-101-generic.ko  duo-1024-3.13.0-101-lowlatency.ko  duo-1024-3.13.0-103-generic.ko  duo-1024-3.13.0-103-lowlatency.ko  duo-1024-3.13.0-105-generic.ko  duo-1024-3.13.0-105-lowlatency.ko  duo-1024-3.13.0-106-generic.ko  duo-1024-3.13.0-106-lowlatency.ko  duo-1024-3.13.0-107-generic.ko  duo-1024-3.13.0-107-lowlatency.ko  duo-1024-3.13.0-108-generic.ko  duo-1024-3.13.0-108-lowlatency.ko  duo-1024-3.13.0-109-generic.ko  duo-1024-3.13.0-109-lowlatency.ko  duo-1024-3.13.0-110-generic.ko  duo-1024-3.13.0-110-lowlatency.ko  duo-1024-3.13.0-112-generic.ko  duo-1024-3.13.0-112-lowlatency.ko  duo-1024-3.13.0-113-generic.ko  duo-1024-3.13.0-113-lowlatency.ko  duo-1024-3.13.0-115-generic.ko  duo-1024-3.13.0-115-lowlatency.ko  duo-1024-3.13.0-116-generic.ko  duo-1024-3.13.0-116-lowlatency.ko  duo-1024-3.13.0-117-generic.ko  duo-1024-3.13.0-117-lowlatency.ko  duo-1024-3.13.0-24-generic.ko  duo-1024-3.13.0-24-lowlatency.ko  duo-1024-3.13.0-27-generic.ko  duo-1024-3.13.0-27-lowlatency.ko  duo-1024-3.13.0-29-generic.ko  duo-1024-3.13.0-29-lowlatency.ko  duo-1024-3.13.0-30-generic.ko  duo-1024-3.13.0-30-lowlatency.ko  duo-1024-3.13.0-32-generic.ko  duo-1024-3.13.0-32-lowlatency.ko  duo-1024-3.13.0-33-generic.ko  (+673 more)
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/C++/: CMakeLists.txt  README.txt
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/C++/Sample-01-Motion/: CMakeLists.txt  Sample.cpp
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/C++/Sample-02-Images/: CMakeLists.txt  Sample.cpp
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/C++/Sample-03-Parameters/: CMakeLists.txt  Sample.cpp  Sample.h
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/C++/Sample-04-Sequences/: CMakeLists.txt  Sample.cpp
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/C++/Sample-05-Polling/: CMakeLists.txt  Sample.cpp  Sample.h
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/Dense3D/: CMakeLists.txt  CleanAll.sh  README.txt
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/Dense3D/Sample-01-Dense3D/: CMakeLists.txt  Sample.cpp  Sample.h
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/Dense3D/Sample-02-Dense3DMT/: CMakeLists.txt  Sample.cpp  Sample.h
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/Dense3D/Sample-03-Dense3DPointCloud/: CMakeLists.txt  Sample.cpp  Sample.h
External Tools/CL-DUO3D-LIN-1.0.80.20/DUOSDK/Samples/OpenCV/Sample-02-cvBGSubtract/: CMakeLists.txt  Sample.cpp  Sample.h
IK_Matlab/: ControlsTestv6(latest).m
MatrixClass/: ckp_Matrix.cpp  ckp_Matrix.h  ckp_Matrix.hpp  main.cpp
Workspace/: .rosinstall  arm_drive.launch  cameras.launch  drive.launch  full_autonomy.launch  husky_sim.rviz  rover.launch  science_drive.launch  science_module.launch
Workspace/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Workspace/src/: Tennis.py  science_no_LSs.py
Workspace/src/antenna/: CMakeLists.txt  package.xml  rpi_control.py
Workspace/src/arm_control/: CMakeLists.txt  package.xml
Workspace/src/autonomy_master/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
Workspace/src/ball_following/: CMakeLists.txt  package.xml
Workspace/src/ball_tracker/: CMakeLists.txt  package.xml
Workspace/src/gimbal_camera/: CMakeLists.txt  camera.yml  package.xml
Workspace/src/gimbal_control/: CMakeLists.txt  Camera2.py  package.xml
Workspace/src/gps_viz/: CMakeLists.txt  package.xml
Workspace/src/ik_control/: CMakeLists.txt  README.md  package.xml
Workspace/src/ik_control/include/: IK.h  ckp_Matrix.cpp
Workspace/src/ik_control/launch/: ik_control.launch  local.launch  rover_launch.launch
Workspace/src/ik_control/src/: IK.cpp  arm_controller_node.cpp  arm_controller_node_ML.cpp  arm_controller_node_ML_CAN.cpp  arm_controller_node_MLforreals.cpp  arm_controller_node_MLforreals_CAN.cpp  arm_model_node.cpp  armtest.cpp  test_node.cpp
Workspace/src/local_planner/: CMakeLists.txt  DynamicWindow.cpp  DynamicWindow.h  LocalPlanner.cpp  LocalPlanner.h  LocalPlannerMain.cpp  OccupancyUtils.cpp  OccupancyUtils.h  package.xml
Workspace/src/microstrain_3dm_gx3_35/: .gitignore  CMakeLists.txt  README.md  package.xml
Workspace/src/microstrain_3dm_gx5_45/: CMakeLists.txt
Workspace/src/multimaster_launch/: CHANGELOG.rst  package.xml
Workspace/src/north_finder/: CMakeLists.txt  north_finder.py  package.xml
Workspace/src/occupancy_grid/: CMakeLists.txt  package.xml
Workspace/src/ping_test/: CMakeLists.txt  package.xml  ping_GPS_tracker.cpp
Workspace/src/ping_test/src/: timer.h  (+5 more)
Workspace/src/rover_autonomy/: CMakeLists.txt  package.xml
Workspace/src/science/: CMakeLists.txt  package.xml
Workspace/src/science_controller/: CMakeLists.txt  package.xml  science.yml
Workspace/src/twist2roboteq/: CMakeLists.txt  package.xml
Workspace/src/xbox_controller/: CMakeLists.txt  drive_lis_sub.cpp  package.xml  teleop_node.cpp  teleop_twist.h  teleop_twist_joy.cpp
ci/: check_formatting.bash
config/: 99-rover.rules  interfaces  ip_forwarding  modules  pcan.conf
control_test/: README_PLEASE
control_test/src/test_env/: CMakeLists.txt  package.xml
control_test/src/test_env/include/: IK.h
control_test/src/test_env/src/: IK.cpp  IK_node.cpp  ckp_Matrix.cpp
docker/: docker-build.sh  docker-run.sh  run-ci-tests.sh
docker/xenial/: Dockerfile
docs/: README.md  Simulation Instructions.txt
panorama/: README.MD  pano.cpp  pano.py
panorama/old/: panorama.py
panorama/txtlists/: files2.txt
scripts/: build_and_run_unit_tests.bash  create_catkin_workspace.bash  identify_environment.bash  ros_install.bash
udev/: 99-gps-imu.rules  99-rover-camera.rules
(+209 files in other folders)
