set(ProjectName Sample-02-cvBGSubtract)
project(${ProjectName})
set(Project_SRC Sample.cpp)
add_executable(${ProjectName} ${Project_SRC}) 
if(WIN32)
	find_package(OpenCV REQUIRED HINTS C:/Dev/OpenCV/2.4.10)
	file(TO_NATIVE_PATH ${OpenCV_LIB_PATH}/../bin/opencv_core2410.dll SRC)
	execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${SRC} ${DST}) 
	file(TO_NATIVE_PATH ${OpenCV_LIB_PATH}/../bin/opencv_highgui2410.dll SRC)
	execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${SRC} ${DST}) 
	file(TO_NATIVE_PATH ${OpenCV_LIB_PATH}/../bin/opencv_imgproc2410.dll SRC)
	execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${SRC} ${DST}) 
elseif(UNIX OR APPLE)
	find_package(OpenCV REQUIRED)
endif()
target_link_libraries(${ProjectName} ${DUO_LIBRARY} ${OpenCV_LIBS}) 
